@@ -5,7 +5,7 @@ using Microsoft.VisualStudio.TestTools.UnitTesting;
 namespace Tests
 {
     [TestClass]
-    public class ScontoMaggiorazioneValidator 
+    public class ScontoMaggiorazioneValidator
         : BaseClass<ScontoMaggiorazione, FatturaElettronica.Validators.ScontoMaggiorazioneValidator>
     {
 
@@ -41,7 +41,7 @@ namespace Tests
             validator.ShouldHaveValidationErrorFor(x => x.Importo, challenge);
             validator.ShouldHaveValidationErrorFor(x => x.Percentuale, challenge);
             challenge.Importo = 0;
-            validator.ShouldHaveValidationErrorFor(x => x.Importo, challenge);
+            validator.ShouldNotHaveValidationErrorFor(x => x.Importo, challenge);
             validator.ShouldNotHaveValidationErrorFor(x => x.Percentuale, challenge);
             challenge.Importo = 1;
             validator.ShouldNotHaveValidationErrorFor(x => x.Importo, challenge);
@@ -51,13 +51,13 @@ namespace Tests
             validator.ShouldNotHaveValidationErrorFor(x => x.Percentuale, challenge);
         }
         [TestMethod]
-        public void PercentualeMustHaveValueUnlessPercentualeDoes()
+        public void PercentualeMustHaveValueUnlessImportoDoes()
         {
             challenge.Percentuale = null;
             validator.ShouldHaveValidationErrorFor(x => x.Percentuale, challenge);
             validator.ShouldHaveValidationErrorFor(x => x.Importo, challenge);
             challenge.Percentuale = 0;
-            validator.ShouldHaveValidationErrorFor(x => x.Percentuale, challenge);
+            validator.ShouldNotHaveValidationErrorFor(x => x.Percentuale, challenge);
             validator.ShouldNotHaveValidationErrorFor(x => x.Importo, challenge);
             challenge.Percentuale = 1;
             validator.ShouldNotHaveValidationErrorFor(x => x.Percentuale, challenge);
